tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:81:215: warning: multi-character character constant [-Wmultichar]
   81 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:81:251: warning: multi-character character constant [-Wmultichar]
   81 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp: In function ‘std::shared_ptr<Tree> sample_tree_one()’:
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:171: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                                                                                                           ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:171: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:116: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                                                    ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:116: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:82: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                  ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:82: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:52: error: expected primary-expression before ‘{’ token
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                    ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:469: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:469: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:413: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:413: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:190:366: error: expected primary-expression before ‘{’ token
  190 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                              ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp: In function ‘std::shared_ptr<Tree> sample_tree_two()’:
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:171: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                                                                                                           ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:171: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:116: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                                                    ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:116: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:82: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                  ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:82: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:52: error: expected primary-expression before ‘{’ token
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                    ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:469: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:469: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:413: error: designated initializers cannot be used with a non-aggregate type ‘Node’
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:413: error: no matching function for call to ‘Node::Node(<brace-enclosed initializer list>)’
/workspace/mochi/tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp:194:366: error: expected primary-expression before ‘{’ token
  194 |     return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
      |                                                                                                                                                                                                                                                                                                                                                                              ^
