tests/algorithms/transpiler/CPP/data_structures/binary_tree/binary_tree_path_sum.cpp
// Generated by Mochi transpiler v0.10.59 on 2025-08-07 00:23:00 GMT+7
#include <iostream>
#include <string>
#include <memory>
#include <sstream>
#include <iomanip>
#include <cmath>
#include <optional>
#include <vector>
#include <any>
#include <type_traits>
#include <cstdlib>
#include <chrono>
#include <sys/resource.h>
#include <unistd.h>
#include <cstdio>
#include <map>


static int _now() {
    static long long seed = 0;
    static bool seeded = false;
    if (!seeded) {
        const char* s = std::getenv("MOCHI_NOW_SEED");
        if (s && *s) { seed = std::atoll(s); seeded = true; }
    }
    if (seeded) {
        seed = (seed * 1664525 + 1013904223) % 2147483647;
        return static_cast<int>(seed);
    }
    return (int)(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count() % 2147483647);
}
static long long _mem() {
#if defined(__linux__)
    long long rss = 0;
    FILE* f = std::fopen("/proc/self/statm", "r");
    if (f) { long long pages; if (std::fscanf(f, "%*s %lld", &pages) == 1) rss = pages * sysconf(_SC_PAGESIZE); std::fclose(f); }
    if (rss == 0) {
        f = std::fopen("/proc/self/status", "r");
        if (f) {
            char buf[256];
            while (std::fgets(buf, sizeof buf, f)) {
                long long val;
                if (std::sscanf(buf, "VmRSS: %lld", &val) == 1 || std::sscanf(buf, "VmHWM: %lld", &val) == 1) {
                    rss = val * 1024;
                    break;
                }
            }
            std::fclose(f);
        }
    }
    if (rss == 0) {
        struct rusage usage{};
        getrusage(RUSAGE_SELF, &usage);
        rss = (long long)usage.ru_maxrss * 1024;
    }
    return rss;
#elif defined(__APPLE__)
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss;
#else
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss * 1024;
#endif
}
static long long _bench_now() {
    return std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count();
}
static void any_to_stream(std::ostream& os, const std::any& val) {
    if(val.type() == typeid(int)) os << std::any_cast<int>(val);
    else if(val.type() == typeid(int64_t)) os << std::any_cast<int64_t>(val);
    else if(val.type() == typeid(double)) os << std::any_cast<double>(val);
    else if(val.type() == typeid(bool)) os << (std::any_cast<bool>(val) ? "true" : "false");
    else if(val.type() == typeid(std::string)) os << std::any_cast<std::string>(val);
    else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ' '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ' '; os << v[j]; } os << ']'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; any_to_stream(os, v[i]); } os << ']'; }
    else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
    else os << "<any>";
}
static double any_to_double(const std::any& v) {
    if(v.type() == typeid(int)) return (double)std::any_cast<int>(v);
    if(v.type() == typeid(double)) return std::any_cast<double>(v);
    return 0;
}
static std::string any_to_string(const std::any& v) {
    if(v.type() == typeid(std::string)) return std::any_cast<std::string>(v);
    if(v.type() == typeid(int)) return std::to_string(std::any_cast<int>(v));
    if(v.type() == typeid(int64_t)) return std::to_string(std::any_cast<int64_t>(v));
    if(v.type() == typeid(double)) { std::ostringstream ss; ss << std::any_cast<double>(v); return ss.str(); }
    if(v.type() == typeid(bool)) return std::any_cast<bool>(v) ? "true" : "false";
    return std::string();
}
template <typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec) {
    os << "[";
    for(size_t i=0;i<vec.size();++i){ if(i>0) os << ' '; if constexpr(std::is_same_v<T, std::any>) any_to_stream(os, vec[i]); else os << vec[i]; }
    os << "]";
    return os;
}


template<typename T> std::string _to_string(const T& v) {
    std::ostringstream ss;
    ss << std::boolalpha << v;
    return ss.str();
}
struct Tree;
struct Empty;
struct Node;

std::ostream& operator<<(std::ostream&, const Tree&);
std::ostream& operator<<(std::ostream&, const Empty&);
std::ostream& operator<<(std::ostream&, const Node&);


struct Tree {
    virtual ~Tree() = default;
};

struct Empty : Tree {
    auto operator<=>(const Empty&) const = default;
};

struct Node : Tree {
    std::shared_ptr<Tree> left;
    int64_t value;
    std::shared_ptr<Tree> right;
    Node(std::shared_ptr<Tree> left_, int64_t value_, std::shared_ptr<Tree> right_) : left(std::move(left_)), value(value_), right(std::move(right_)) {}
    auto operator<=>(const Node&) const = default;
};

std::ostream& operator<<(std::ostream& os, const Empty& v) {
    os << '{' << '}';
    return os;
}

std::ostream& operator<<(std::ostream& os, const Node& v) {
    os << '{' << "'left': "<< v.left
 << ", " << "'value': "<< v.value
 << ", " << "'right': "<< v.right
 << '}';
    return os;
}

int64_t dfs(Tree* node, int64_t target, int64_t current);
int64_t path_sum(Tree* node, int64_t target);
std::shared_ptr<Tree> sample_tree_one();
std::shared_ptr<Tree> sample_tree_two();
int main();

int64_t dfs(Tree* node, int64_t target, int64_t current) {
    return ([=]{
    const Empty* __empty = dynamic_cast<const Empty*>(node);
    if (__empty) {
        return int64_t(0);
    }
    const Node* __node = dynamic_cast<const Node*>(node);
    if (__node) {
        Tree* l = __node->left.get();
        int64_t v = __node->value;
        Tree* r = __node->right.get();
        return (((((current + v) == target) ? int64_t(1) : int64_t(0)) + dfs(l, target, (current + v))) + dfs(r, target, (current + v)));
    }
    return int64_t(0);
}());
}

int64_t path_sum(Tree* node, int64_t target) {
    return ([=]{
    const Empty* __empty = dynamic_cast<const Empty*>(node);
    if (__empty) {
        return int64_t(0);
    }
    const Node* __node = dynamic_cast<const Node*>(node);
    if (__node) {
        Tree* l = __node->left.get();
        int64_t v = __node->value;
        Tree* r = __node->right.get();
        return ((dfs((Tree*)(node), target, int64_t(0)) + path_sum(l, target)) + path_sum(r, target));
    }
    return int64_t(0);
}());
}

std::shared_ptr<Tree> sample_tree_one() {
    return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(11), .left = Empty, .right = Empty}});
}

std::shared_ptr<Tree> sample_tree_two() {
    return std::make_shared<Node>(int64_t(10), Node{.value = int64_t(5), .left = Node{.value = int64_t(3), .left = Node{.value = int64_t(3), .left = Empty, .right = Empty}, .right = Node{.value = -int64_t(2), .left = Empty, .right = Empty}}, .right = Node{.value = int64_t(2), .left = Empty, .right = Node{.value = int64_t(1), .left = Empty, .right = Empty}}}, Node{.value = -int64_t(3), .left = Empty, .right = Node{.value = int64_t(10), .left = Empty, .right = Empty}});
}

int main() {
    {
        struct __BenchGuard {
            long long start;
            __BenchGuard() : start(_bench_now()) {}
            ~__BenchGuard() {
                    auto __bench_end = _bench_now();
                    auto __bench_mem = _mem();
                    auto __bench_dur = __bench_end - start;
                    std::cout << "{\n  \"duration_us\": " << __bench_dur << ",\n  \"memory_bytes\": " << __bench_mem << ",\n  \"name\": \"main\"\n}" << std::endl;
            }
        } __bench_guard;
        std::shared_ptr<Tree> tree1 = sample_tree_one();
        std::cout << path_sum(tree1.get(), int64_t(8));
        std::cout << std::endl;
        std::cout << path_sum(tree1.get(), int64_t(7));
        std::cout << std::endl;
        std::shared_ptr<Tree> tree2 = sample_tree_two();
        std::cout << path_sum(tree2.get(), int64_t(8));
        std::cout << std::endl;
    }
    return 0;
}
